base/security/oauth2-proxy/traefik-oauth2-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-auth
spec:
  forwardAuth:
    address: http://oauth2-proxy.${TARGET_NAMESPACE}.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - Authorization
      - Set-Cookie
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-errors
spec:
  errors:
    status:
      - "401-403"
    statusRewrites:
      "401": 302
      "402": 302
      "403": 302
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/sign_in?rd={url}
