base/security/oauth2-proxy/oauth2-proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth2-proxy
  labels:
    k8s-app: oauth2-proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
  type: ClusterIP
